--- a/breackout.html
+++ b/breackout.html
@@ -5,26 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./breackout.css">
 </head>
-<body>
-    <h1>BreakOut!</h1>
-    <button id="rules-btn" class="btn rules-btn">
-        Jugar
-    </button>
+<body class="d-flex align-items-center flex-column">
+    <h1 class="display-1 center">BreakOut!</h1>
+        <button id="rules-btn" class="btn btn-warning rules-btn boton-rules">
+            Jugar
+        </button>
     <div id="rules" class="rules">
-        <h2>History</h2>
+        <h2 class="display-1 center">History</h2>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, quo? Accusantium quisquam ut molestias quod nihil tempore magni nobis quo expedita molestiae illo, modi dolorum fugiat, neque beatae veritatis reiciendis nemo amet dolore. Fuga, ab veniam? Placeat, veniam nulla laboriosam quibusdam accusamus fuga quis quae id modi nisi. Blanditiis sapiente commodi pariatur est suscipit provident ducimus adipisci, dolorem vitae reprehenderit.
         </p>
         <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta maxime numquam facere ducimus explicabo eligendi facilis harum quibusdam. Sequi cum, earum fuga ipsa, inventore neque, minima ullam minus delectus quae ab deleniti impedit! Labore, rerum quod! Sit, labore dolores molestiae expedita voluptas vel commodi sint.
         </p>
-        <button class="btn" id="close-btn">
+        <button class="btn btn-info" id="close-btn">
             Cerrar
         </button>
     </div>
     <canvas id="canvas" width="800" height="600"></canvas>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="./breackout.js"></script>
 </html>
